// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<DebateStepPageVoteForm/> should renders correctly when argumented 1`] = `
<div
  style="width:100%;opacity:0"
>
  <div
    class="sc-bdnylx Flex___StyledAppBox-ll88x1-0 jA-dDXy"
  >
    <span
      aria-label="vote"
      class="DebateStepPageVoteForm___StyledSpan2-sc-89or92-2 gBdWGG"
      role="img"
    >
      🎉
    </span>
    <span>
      thanks-for-debate-richer
    </span>
    <button
      class="sc-bdnylx Button__ButtonInner-sc-1rfi9ir-0 jNKdvh kiIbCx"
      type="button"
    >
      delete.vote.against
    </button>
  </div>
  <div
    class="sc-bdnylx Flex___StyledAppBox-ll88x1-0 fXlkxX hmLkpw"
  >
    <a
      class="twitter-share-button"
      data-show-count="false"
      href="https://twitter.com/share?ref_src=twsrc%5Etfw"
    >
      Tweet
    </a>
    <button
      class="sc-bdnylx Button__ButtonInner-sc-1rfi9ir-0 cRPoGN gQREUn"
      type="button"
    >
      <iconmock
        class="sc-bdnylx Icon__IconInner-sc-19k5t1s-0 Icon___StyledIconInner-sc-19k5t1s-1 kGTwVK gtEoKs KA-deO icon"
      />
      global.link
    </button>
  </div>
  <div
    class="sc-bdnylx lgXcQA DebateStepPageVoteForm___StyledCard-sc-89or92-3 gXzbu"
  >
    <form
      class="DebateStepPageVoteForm__Form-sc-89or92-0 cEBedW"
      id="debate-argument-form"
    >
      <div
        class="form-group"
      >
        <textarea
          aria-describedby="body-error "
          aria-invalid="false"
          autocomplete="off"
          class="form-control"
          id="body"
          minlength="1"
          name="body"
          placeholder="why-are-you-against"
          style="pointer-events:auto"
          type="textarea"
        />
        <div
          class="Notepad__Container-zxztj1-0 dDbxVX visible-print-block"
        >
          <span />
          <span />
          <span />
          <span />
          <span />
          <span />
          <span />
          <span />
          <span />
          <span />
          <span />
          <span />
          <span />
          <span />
          <span />
        </div>
      </div>
      <div
        class="sc-bdnylx Flex___StyledAppBox-ll88x1-0 Aouvj"
      >
        <button
          class="sc-bdnylx Button__ButtonInner-sc-1rfi9ir-0 vNxBw engGlZ"
          type="button"
        >
          global.cancel
        </button>
        <button
          class="sc-bdnylx Button__ButtonInner-sc-1rfi9ir-0 cTWwWU haoEhH"
          type="submit"
        >
          argument.publish.mine
        </button>
      </div>
    </form>
  </div>
</div>
`;

exports[`<DebateStepPageVoteForm/> should renders correctly when argumented not confirmed 1`] = `
<div
  style="width:100%;opacity:0"
>
  <div
    class="sc-bdnylx Flex___StyledAppBox-ll88x1-0 jA-dDXy"
  >
    <span
      aria-label="vote"
      class="DebateStepPageVoteForm___StyledSpan2-sc-89or92-2 gBdWGG"
      role="img"
    >
      🎉
    </span>
    <span>
      publish.argument.validate.account
    </span>
    <button
      class="sc-bdnylx Button__ButtonInner-sc-1rfi9ir-0 jNKdvh kiIbCx"
      type="button"
    >
      delete.vote.against
    </button>
  </div>
  <div
    class="sc-bdnylx lgXcQA DebateStepPageVoteForm___StyledCard-sc-89or92-3 gXzbu"
  >
    <form
      class="DebateStepPageVoteForm__Form-sc-89or92-0 cEBedW"
      id="debate-argument-form"
    >
      <div
        class="form-group"
      >
        <textarea
          aria-describedby="body-error "
          aria-invalid="false"
          autocomplete="off"
          class="form-control"
          id="body"
          minlength="1"
          name="body"
          placeholder="why-are-you-against"
          style="pointer-events:auto"
          type="textarea"
        />
        <div
          class="Notepad__Container-zxztj1-0 dDbxVX visible-print-block"
        >
          <span />
          <span />
          <span />
          <span />
          <span />
          <span />
          <span />
          <span />
          <span />
          <span />
          <span />
          <span />
          <span />
          <span />
          <span />
        </div>
      </div>
      <div
        class="sc-bdnylx Flex___StyledAppBox-ll88x1-0 Aouvj"
      >
        <button
          class="sc-bdnylx Button__ButtonInner-sc-1rfi9ir-0 vNxBw engGlZ"
          type="button"
        >
          global.cancel
        </button>
        <button
          class="sc-bdnylx Button__ButtonInner-sc-1rfi9ir-0 cTWwWU haoEhH"
          type="submit"
        >
          argument.publish.mine
        </button>
      </div>
    </form>
  </div>
</div>
`;

exports[`<DebateStepPageVoteForm/> should renders correctly when argumented not confirmed on mobile 1`] = `
<div
  style="width:100%;opacity:1"
>
  <div
    class="sc-bdnylx Flex___StyledAppBox-ll88x1-0 jA-dDXy"
  >
    <button
      class="sc-bdnylx Button__ButtonInner-sc-1rfi9ir-0 jNKdvh kiIbCx"
      type="button"
    >
      delete.vote.against
    </button>
    <p
      class="sc-bdnylx dzpbOH"
    >
      <span
        aria-label="vote"
        class="DebateStepPageVoteForm___StyledSpan-sc-89or92-1 bypLWg"
        role="img"
      >
        🎉
      </span>
      <span>
        publish.argument.validate.account
      </span>
    </p>
  </div>
  <button
    class="sc-bdnylx Button__ButtonInner-sc-1rfi9ir-0 cWJmph haoEhH"
    type="button"
  >
    publish-argument
  </button>
</div>
`;

exports[`<DebateStepPageVoteForm/> should renders correctly when argumented on mobile 1`] = `
<div
  style="width:100%;opacity:1"
>
  <div
    class="sc-bdnylx Flex___StyledAppBox-ll88x1-0 jA-dDXy"
  >
    <button
      class="sc-bdnylx Button__ButtonInner-sc-1rfi9ir-0 jNKdvh kiIbCx"
      type="button"
    >
      delete.vote.against
    </button>
    <p
      class="sc-bdnylx dzpbOH"
    >
      <span
        aria-label="vote"
        class="DebateStepPageVoteForm___StyledSpan-sc-89or92-1 bypLWg"
        role="img"
      >
        🎉
      </span>
      <span>
        thanks-for-debate-richer
      </span>
    </p>
  </div>
  <div
    class="sc-bdnylx Flex___StyledAppBox-ll88x1-0 fXlkxX hmLkpw"
  >
    <a
      class="twitter-share-button"
      data-show-count="false"
      href="https://twitter.com/share?ref_src=twsrc%5Etfw"
    >
      Tweet
    </a>
    <button
      class="sc-bdnylx Button__ButtonInner-sc-1rfi9ir-0 cRPoGN gQREUn"
      type="button"
    >
      <iconmock
        class="sc-bdnylx Icon__IconInner-sc-19k5t1s-0 Icon___StyledIconInner-sc-19k5t1s-1 kGTwVK gtEoKs KA-deO icon"
      />
      global.link
    </button>
  </div>
  <button
    class="sc-bdnylx Button__ButtonInner-sc-1rfi9ir-0 cWJmph haoEhH"
    type="button"
  >
    publish-argument
  </button>
</div>
`;

exports[`<DebateStepPageVoteForm/> should renders correctly when voted 1`] = `
<div
  style="width:100%;opacity:0"
>
  <div
    class="sc-bdnylx Flex___StyledAppBox-ll88x1-0 jA-dDXy"
  >
    <span
      aria-label="vote"
      class="DebateStepPageVoteForm___StyledSpan2-sc-89or92-2 gBdWGG"
      role="img"
    >
      🗳️
    </span>
    <span>
      thanks-for-your-vote
    </span>
    <button
      class="sc-bdnylx Button__ButtonInner-sc-1rfi9ir-0 jNKdvh kiIbCx"
      type="button"
    >
      delete.vote.against
    </button>
  </div>
  <div
    class="sc-bdnylx lgXcQA DebateStepPageVoteForm___StyledCard-sc-89or92-3 gXzbu"
  >
    <form
      class="DebateStepPageVoteForm__Form-sc-89or92-0 cEBedW"
      id="debate-argument-form"
    >
      <div
        class="form-group"
      >
        <textarea
          aria-describedby="body-error "
          aria-invalid="false"
          autocomplete="off"
          class="form-control"
          id="body"
          minlength="1"
          name="body"
          placeholder="why-are-you-against"
          style="pointer-events:auto"
          type="textarea"
        />
        <div
          class="Notepad__Container-zxztj1-0 dDbxVX visible-print-block"
        >
          <span />
          <span />
          <span />
          <span />
          <span />
          <span />
          <span />
          <span />
          <span />
          <span />
          <span />
          <span />
          <span />
          <span />
          <span />
        </div>
      </div>
      <div
        class="sc-bdnylx Flex___StyledAppBox-ll88x1-0 Aouvj"
      >
        <button
          class="sc-bdnylx Button__ButtonInner-sc-1rfi9ir-0 vNxBw engGlZ"
          type="button"
        >
          global.cancel
        </button>
        <button
          class="sc-bdnylx Button__ButtonInner-sc-1rfi9ir-0 cTWwWU haoEhH"
          type="submit"
        >
          argument.publish.mine
        </button>
      </div>
    </form>
  </div>
</div>
`;

exports[`<DebateStepPageVoteForm/> should renders correctly when voted anonymously 1`] = `
<div
  style="width:100%;opacity:0"
>
  <div
    class="sc-bdnylx Flex___StyledAppBox-ll88x1-0 jA-dDXy"
  >
    <span
      aria-label="vote"
      class="DebateStepPageVoteForm___StyledSpan2-sc-89or92-2 gBdWGG"
      role="img"
    >
      🗳️
    </span>
    <span>
      thanks-for-your-vote {"instance":"CapCollectif"}
    </span>
    <button
      class="sc-bdnylx Button__ButtonInner-sc-1rfi9ir-0 jNKdvh kiIbCx"
      type="button"
    >
      delete.vote.against
    </button>
  </div>
  <span>
    <div
      class="sc-bdnylx lgXcQA DebateStepPageVoteForm___StyledCard-sc-89or92-3 gXzbu"
    >
      <form
        class="DebateStepPageVoteForm__Form-sc-89or92-0 gpNHGt"
        disabled=""
        id="debate-argument-form"
      >
        <div
          class="form-group"
        >
          <textarea
            aria-describedby="body-error "
            aria-invalid="false"
            autocomplete="off"
            class="form-control"
            id="body"
            minlength="1"
            name="body"
            placeholder="why-are-you-against"
            style="pointer-events:none"
            type="textarea"
          />
          <div
            class="Notepad__Container-zxztj1-0 dDbxVX visible-print-block"
          >
            <span />
            <span />
            <span />
            <span />
            <span />
            <span />
            <span />
            <span />
            <span />
            <span />
            <span />
            <span />
            <span />
            <span />
            <span />
          </div>
        </div>
      </form>
    </div>
  </span>
</div>
`;

exports[`<DebateStepPageVoteForm/> should renders correctly when voted anonymously on mobile 1`] = `
<div
  style="width:100%;opacity:1"
>
  <div
    class="sc-bdnylx Flex___StyledAppBox-ll88x1-0 jA-dDXy"
  >
    <button
      class="sc-bdnylx Button__ButtonInner-sc-1rfi9ir-0 jNKdvh kiIbCx"
      type="button"
    >
      delete.vote.against
    </button>
    <p
      class="sc-bdnylx dzpbOH"
    >
      <span
        aria-label="vote"
        class="DebateStepPageVoteForm___StyledSpan-sc-89or92-1 bypLWg"
        role="img"
      >
        🗳️
      </span>
      <span>
        thanks-for-your-vote {"instance":"CapCollectif"}
      </span>
    </p>
  </div>
  <span>
    <button
      class="sc-bdnylx Button__ButtonInner-sc-1rfi9ir-0 cWJmph haoEhH"
      type="button"
    >
      publish-argument
    </button>
  </span>
</div>
`;

exports[`<DebateStepPageVoteForm/> should renders correctly when voted on mobile 1`] = `
<div
  style="width:100%;opacity:1"
>
  <div
    class="sc-bdnylx Flex___StyledAppBox-ll88x1-0 jA-dDXy"
  >
    <button
      class="sc-bdnylx Button__ButtonInner-sc-1rfi9ir-0 jNKdvh kiIbCx"
      type="button"
    >
      delete.vote.against
    </button>
    <p
      class="sc-bdnylx dzpbOH"
    >
      <span
        aria-label="vote"
        class="DebateStepPageVoteForm___StyledSpan-sc-89or92-1 bypLWg"
        role="img"
      >
        🗳️
      </span>
      <span>
        thanks-for-your-vote
      </span>
    </p>
  </div>
  <button
    class="sc-bdnylx Button__ButtonInner-sc-1rfi9ir-0 cWJmph haoEhH"
    type="button"
  >
    publish-argument
  </button>
</div>
`;
